--- a/studio_ghibli_api/public/index.html
+++ b/studio_ghibli_api/public/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Studio Ghibli movies</title>
+    <link rel="stylesheet" href="css/style.css">
     <script src="js/bundle.js"></script>
   </head>
   <body>
     <h1>Studio Ghibli movies</h1>
+    <div id="film-container"></div>
   </body>
 </html>
